GNOME Bugzilla – Bug 612067
Leaking fd because GFileEnumerator isn't properly closed/unrefed
Last modified: 2010-03-07 13:38:37 UTC
When adding directories with many subdirectories, we would end up running out of fd. The cause is that GFileEnumerator in totem-pl-parser-media.c:totem_pl_parser_load_directory() wasn't properly closed/unreferenced.
Created attachment 155468 [details] [review] directories: Don't leak open files. The GFileEnumerator wasn't properly closed/unreferenced, causing the fd for the directories to be left opened. When opening very big media collections, we would end up being out of fd.
Review of attachment 155468 [details] [review]: Oops... Please commit to gnome-2-28 and master