directories: Don't leak open files.

The GFileEnumerator wasn't properly closed/unreferenced, causing the fd for
the directories to be left opened.
When opening very big media collections, we would end up being out of fd.

https://bugzilla.gnome.org/show_bug.cgi?id=612067