plparse/totem-pl-parser-media.c
@@ -213,6 +213,8 @@ totem_pl_parser_load_directory (GFile *file, GList **list, gboolean *unhandled)
 	if (e == NULL) {
 		if (g_error_matches (err, G_IO_ERROR, G_IO_ERROR_NOT_SUPPORTED) != FALSE)
 			*unhandled = TRUE;
+		g_file_enumerator_close (e, NULL, NULL);
+		g_object_unref (e);
 		g_error_free (err);
 		return FALSE;
 	}
@@ -220,6 +222,8 @@ totem_pl_parser_load_directory (GFile *file, GList **list, gboolean *unhandled)
 	while ((info = g_file_enumerator_next_file (e, NULL, NULL)) != NULL)
 		*list = g_list_prepend (*list, info);
 
+	g_file_enumerator_close (e, NULL, NULL);
+	g_object_unref (e);
 	return TRUE;
 }
 
